# arp-compiler

./: Cargo.toml  README.md  TODO.md
.cargo/: config.toml
Documentation/: ProgrammingManifest.md  Reference.md
arp_ast_processor/: Cargo.toml
arp_ast_processor/src/: errors.rs  lib.rs  utils.rs
arp_ast_processor/src/ast/: add_get_mut.rs  errors.rs  index.rs  iterators.rs  macros.rs  mod.rs  tests.rs  traits.rs  traversing.rs  validators.rs
arp_ast_processor/src/chumsky_folder/: block_scope.rs  expression.rs  mod.rs  statement.rs  utils.rs
arp_ast_processor/src/chumsky_folder/declaration/: arp_file.rs  function.rs  implementation.rs  mod.rs  structure.rs
arp_ast_processor/src/post/: mod.rs
arp_ast_processor/src/tests/: declaration.rs  expression.rs  imports.rs  itegration.rs  managed_imports.rs  mod.rs  statement.rs  ty_resolver.rs  validator.rs
arp_ast_processor/src/type_resolver/: imports_graph.rs  managed_dll_info.rs  mod.rs
arp_ast_processor/src/types/: ast_node_value.rs  block_scope.rs  declaration.rs  expression.rs  file.rs  function.rs  implementation.rs  mod.rs  simple.rs  statement.rs  structure.rs  type_collection.rs
arp_ast_processor/src/validations/: mod.rs
arp_compiler/: Cargo.toml
arp_compiler/src/: errors.rs  main.rs
arp_compiler/src/assembly/: config.rs  emit_ilproj.rs  mod.rs
arp_il_emitter/: Cargo.toml
arp_lexer/: Cargo.toml
arp_lsp/: Cargo.toml
arp_lsp/src/: lib.rs
arp_parser/: Cargo.toml
arp_types/: Cargo.toml
csharp-assembly-info-exporter/: AsmDef.cs  Program.cs  Scanner.cs  Server.cs  console.dll.json  (+2 more)
(+39 files in other folders)
