[package]
name = "arp_compiler"
version = "0.0.1"
edition = "2021"

[dependencies]

thiserror = "1.0.63"
ariadne = "0.4.1"

arp_types = { path = "../arp_types"}
arp_lexer = { path = "../arp_lexer"}
arp_parser = { path = "../arp_parser" }
arp_il_emitter = { path = "../arp_il_emitter" }
arp_ast_processor = { path = "../arp_ast_processor" }
arp_lsp = { path = "../arp_lsp" }
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
dunce = "1.0.5"
walkdir = "2.5.0"
toml = "0.8.19"
tempfile = "3.12.0"
